--- a/package.json
+++ b/package.json
@@ -8,21 +8,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "15.4.2",
-    "react-native": "^0.40.0",
-    "react-native-blur": "^2.0.0",
-    "react-native-parabolic": "^1.1.1",
-    "react-native-scrollable-tab-view": "^0.7.1",
-    "react-native-splash-screen": "^2.0.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-native": "^0.52.0",
+    "react-native-blur": "^3.2.2",
+    "react-native-scrollable-tab-view": "^0.8.0",
+    "react-native-splash-screen": "^3.0.6",
     "react-native-swiper": "^1.5.4",
     "react-native-tab-navigator": "^0.3.3",
-    "react-native-vector-icons": "^4.0.0"
+    "react-native-vector-icons": "^4.0.0",
+    "react-navigation": "^1.0.0-beta.23"
   },
   "devDependencies": {
-    "babel-jest": "18.0.0",
-    "babel-preset-react-native": "1.9.1",
-    "jest": "18.1.0",
-    "react-test-renderer": "15.4.2"
+    "babel-jest": "22.0.4",
+    "babel-preset-react-native": "4.0.0",
+    "jest": "22.0.4",
+    "react-test-renderer": "16.2.0"
   },
   "jest": {
     "preset": "react-native"
