--- a/ios/Elm/Info.plist
+++ b/ios/Elm/Info.plist
@@ -43,6 +43,20 @@
 	<array>
 		<string>armv7</string>
 	</array>
+		<key>UIAppFonts</key>
+    	<array>
+    		<string>Ionicons.ttf</string>
+    		<string>Entypo.ttf</string>
+    		<string>EvilIcons.ttf</string>
+    		<string>FontAwesome.ttf</string>
+    		<string>Foundation.ttf</string>
+    		<string>Ionicons.ttf</string>
+    		<string>MaterialCommunityIcons.ttf</string>
+    		<string>MaterialIcons.ttf</string>
+    		<string>Octicons.ttf</string>
+    		<string>SimpleLineIcons.ttf</string>
+    		<string>Zocial.ttf</string>
+    	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
