--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.3.6",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-native": "^0.52.0",
     "react-native-blur": "^3.2.2",
     "react-native-scrollable-tab-view": "^0.8.0",
-    "react-native-splash-screen": "^3.0.6",
     "react-native-swiper": "^1.5.4",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-vector-icons": "^4.0.0",
